# mechdlk_sdk

./: .gitignore  LICENSE  MechDLKSDKConfig.cmake  MechDLKSDKConfigVersion.cmake  README.md  README_ko-KR.md  README_zh-CN.md
Licenses/tensorrt/: tensorrt-License.txt
dll/: UserMsg.ini  UserMsgDe.ini  UserMsgEs.ini  UserMsgJa.ini  UserMsgRu.ini  UserMsgZh.ini
include/c/: dl_definition.h  dl_packInfer.h  dl_result.h
include/common/: Export.h  StatusCode.h
include/cpp/: MMIndResult.h  MMindImage.h  MMindInferEngine.h  common.h
lib/: mmind_backendengine_cpu.lib  mmind_backendengine_cuda.lib  mmind_cuda_utils.lib  mmind_dl_sdk_c.lib  mmind_dl_sdk_common.lib  mmind_dl_sdk_cpp.lib  mmind_dl_sdk_cpp_base.lib
samples/c/: CMakeLists.txt
samples/c/Advanced/: CascadeModel.c  FolderImagesInfer.c  MultiImageInfer.c
samples/c/Basic/: Classification.c  DefectSegmentation.c  FastPositioning.c  InstanceSegmentation.c  ObjectDetection.c  TextDetection.c  TextRecognition.c  UnsupSegmentation.c
samples/cpp/: CMakeLists.txt
samples/cpp/Advanced/ImageInferWithOpenCV/: ImageInferWithOpenCV.cpp  OpenCVTools.cpp  OpenCVTools.h
samples/cpp/Basic/ImageInfer/: ImageInfer.cpp
samples/cpp/Basic/MultiImageInfer/: MultiImageInfer.cpp
samples/csharp/: MechDLCShapeSamples.sln  MechDLCShapeWithHalconSamples.sln  MechDLCShapeWithOpenCVSamples.sln
samples/csharp/Advanced/HalconInferDemo/: HalconInferDemo.cs  HalconInferDemo.csproj  HalconTools.cs
samples/csharp/Advanced/HalconInferDemo/Properties/: AssemblyInfo.cs
samples/csharp/Advanced/ImageInferWithHalcon/: HalconTools.cs  ImageInferWithHalcon.cs  ImageInferWithHalcon.csproj
samples/csharp/Advanced/ImageInferWithHalcon/Properties/: AssemblyInfo.cs
samples/csharp/Advanced/ImageInferWithOpenCV/: ImageInferWithOpenCV.cs  ImageInferWithOpenCV.csproj  OpenCVTools.cs
samples/csharp/Advanced/ImageInferWithOpenCV/Properties/: AssemblyInfo.cs
samples/csharp/Advanced/OpenCVInferDemo/: OpenCVInferDemo.cs  OpenCVInferDemo.csproj  OpenCVTools.cs
samples/csharp/Advanced/OpenCVInferDemo/Properties/: AssemblyInfo.cs
samples/csharp/Basic/ImageInfer/: ImageInfer.cs  ImageInfer.csproj
samples/csharp/Basic/ImageInfer/Properties/: AssemblyInfo.cs
samples/csharp/Basic/InferDemo/: InferDemo.cs  InferDemo.csproj
samples/csharp/Basic/InferDemo/Properties/: AssemblyInfo.cs
samples/csharp/Basic/MutiImageInfer/: MutiImageInfer.cs  MutiImageInfer.csproj
samples/csharp/Basic/MutiImageInfer/Properties/: AssemblyInfo.cs
samples/csharp/Basic/MutiImageInferDemo/: MutiImageInferDemo.cs  MutiImageInferDemo.csproj
samples/csharp/Basic/MutiImageInferDemo/Properties/: AssemblyInfo.cs
